# mlx-hw-counters

./: .gitignore  pyproject.toml
mlx_exporter/: __main__.py  mcra_device.py  perf_counter_unit.py  perf_monitor.py
mlx_exporter/mappings/: __init__.py  cx5.py  cx6.py
mlx_hw_counters.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
