[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-hw-counters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prometheus-client>=0.24.1",
]

[tool.setuptools.packages.find]
include = ["mlx_exporter*"]

[project.scripts]
mlx_exporter = "mlx_exporter.__main__:main"
